--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,9 +11,10 @@
     <body>
         <div class="container">
             <h1>Utilizando Bootstrap</h1>
-            <p>Texto gerado a partir do site:<a href="http://mussumipsum.com/"> Mussum Ipsum</a></p>
+            <p>Gerador de Ipsum Lorem:<a href="http://mussumipsum.com/"> Mussum Ipsum</a></p>
             <p>Mussum Ipsum, cacilds vidis litro abertis. Cevadis im ampola pa arma uma pindureta. Todo mundo vê os porris que eu tomo, mas ninguém vê os tombis que eu levo! Quem num gosti di mum que vai caçá sua turmis! Ta deprimidis, eu conheço uma cachacis que pode alegrar sua vidis.</p>
-            <a href="tipografia.html">Tipografia</a>
+            <p><a href="tipografia.html">Tipografia</a></p>
+            <p><a href="noticia.html">Layout Responsivo</a></p>
         </div>
 
         <script src="js/jquery-3.1.0.min.js"></script>
