Bootstrap grid system

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,12 +9,52 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
     </head>
     <body>
+        <!--
+            LG: >= 1200px
+            MD: >= 992px < 1200px
+            SM: >= 768px < 992px
+            XS: < 768px
+        -->
+        
         <div class="container">
             <h1>Utilizando Bootstrap</h1>
             <p>Gerador de Ipsum Lorem:<a href="http://mussumipsum.com/"> Mussum Ipsum</a></p>
             <p>Mussum Ipsum, cacilds vidis litro abertis. Cevadis im ampola pa arma uma pindureta. Todo mundo vê os porris que eu tomo, mas ninguém vê os tombis que eu levo! Quem num gosti di mum que vai caçá sua turmis! Ta deprimidis, eu conheço uma cachacis que pode alegrar sua vidis.</p>
             <p><a href="tipografia.html">Tipografia</a></p>
             <p><a href="noticia.html">Layout Responsivo</a></p>
+            
+            <div class="row">
+                <div class="col-xs-6 col-sm-4">
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Painel 01</h3>
+                        </div>
+                        <div class="panel-body">
+                            <p>A equipa da Google Brain, projecto de aprendizagem profunda da Google, mostrou como as máquinas podem aprender a proteger as suas próprias mensagens de olhares curiosos.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-sm-4">
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Painel 02</h3>
+                        </div>
+                        <div class="panel-body">
+                            <p>Como podemos perceber no artigo da News Cientist, os investigadores Martín Abadi e David Andersen, integrantes da Google Brain, mostraram que as redes neurais – sistemas de computação baseados em neurónios artificiais – conseguem criar as suas próprias técnica de criptografia.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-6 col-sm-4">
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Painel 03</h3>
+                        </div>
+                        <div class="panel-body">
+                            <p>No teste, os computadores foram capazes de desenvolver a sua própria técnica para criptografar recorrendo à aprendizagem da máquina, sem qualquer instrução prévia de algoritmos criptográficos específicos.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <script src="js/jquery-3.1.0.min.js"></script>
