Adicionado tooltip nos botões de ação.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -96,9 +96,9 @@
               <td>Jhony</td>
               <td><span class="label label-warning">Em andamento</span></td>
               <td class="text-center">
-                <a href=""><span class="glyphicon glyphicon-ok text-success"></span></a>
-                <a href=""><span class="glyphicon glyphicon-pencil text-warning"></span></a>
-                <a href=""><span class="glyphicon glyphicon-trash text-danger"></span></a>
+                <a href="" data-toggle="tooltip" title="Finalizar"><span class="glyphicon glyphicon-ok text-success"></span></a>
+                <a href="" data-toggle="tooltip" title="Editar"><span class="glyphicon glyphicon-pencil text-warning"></span></a>
+                <a href="" data-toggle="tooltip" title="Excluir"><span class="glyphicon glyphicon-trash text-danger"></span></a>
               </td>
             </tr>
             
@@ -110,9 +110,9 @@
               <td>Jorge</td>
               <td><span class="label label-danger">Cancelado</span></td>
               <td class="text-center">
-                <a href=""><span class="glyphicon glyphicon-ok text-success"></span></a>
-                <a href=""><span class="glyphicon glyphicon-pencil text-warning"></span></a>
-                <a href=""><span class="glyphicon glyphicon-trash text-danger"></span></a>
+                <a href="" data-toggle="tooltip" title="Finalizar"><span class="glyphicon glyphicon-ok text-success"></span></a>
+                <a href="" data-toggle="tooltip" title="Editar"><span class="glyphicon glyphicon-pencil text-warning"></span></a>
+                <a href="" data-toggle="tooltip" title="Excluir"><span class="glyphicon glyphicon-trash text-danger"></span></a>
               </td>
             </tr>
             <tr>
@@ -123,9 +123,9 @@
               <td>Jorge</td>
               <td><span class="label label-success">Concluído</span></td>
               <td class="text-center">
-                <a href=""><span class="glyphicon glyphicon-ok text-success"></span></a>
-                <a href=""><span class="glyphicon glyphicon-pencil text-warning"></span></a>
-                <a href=""><span class="glyphicon glyphicon-trash text-danger"></span></a>
+                <a href="" data-toggle="tooltip" title="Finalizar"><span class="glyphicon glyphicon-ok text-success"></span></a>
+                <a href="" data-toggle="tooltip" title="Editar"><span class="glyphicon glyphicon-pencil text-warning"></span></a>
+                <a href="" data-toggle="tooltip" title="Excluir"><span class="glyphicon glyphicon-trash text-danger"></span></a>
               </td>
             </tr>
             <tr>
@@ -136,9 +136,9 @@
               <td>Jorge</td>
               <td><span class="label label-warning">Em Andamento</span></td>
               <td class="text-center">
-                <a href=""><span class="glyphicon glyphicon-ok text-success"></span></a>
-                <a href=""><span class="glyphicon glyphicon-pencil text-warning"></span></a>
-                <a href=""><span class="glyphicon glyphicon-trash text-danger"></span></a>
+                <a href="" data-toggle="tooltip" title="Finalizar"><span class="glyphicon glyphicon-ok text-success"></span></a>
+                <a href="" data-toggle="tooltip" title="Editar"><span class="glyphicon glyphicon-pencil text-warning"></span></a>
+                <a href="" data-toggle="tooltip" title="Excluir"><span class="glyphicon glyphicon-trash text-danger"></span></a>
               </td>
             </tr>
             <tr>
@@ -149,9 +149,9 @@
               <td>Jorge</td>
               <td><span class="label label-success">Concluído</span></td>
               <td class="text-center">
-                <a href=""><span class="glyphicon glyphicon-ok text-success"></span></a>
-                <a href=""><span class="glyphicon glyphicon-pencil text-warning"></span></a>
-                <a href=""><span class="glyphicon glyphicon-trash text-danger"></span></a>
+                <a href="" data-toggle="tooltip" title="Finalizar"><span class="glyphicon glyphicon-ok text-success"></span></a>
+                <a href="" data-toggle="tooltip" title="Editar"><span class="glyphicon glyphicon-pencil text-warning"></span></a>
+                <a href="" data-toggle="tooltip" title="Excluir"><span class="glyphicon glyphicon-trash text-danger"></span></a>
               </td>
             </tr>
           </tbody>
@@ -161,5 +161,6 @@
     
     <script src="js/jquery-3.1.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/tooltip.js"></script>
   </body>
 </html>
