--- a/public_html/index.html
+++ b/public_html/index.html
@@ -101,7 +101,6 @@
                 <a href="" data-toggle="tooltip" title="Excluir"><span class="glyphicon glyphicon-trash text-danger"></span></a>
               </td>
             </tr>
-
             <tr>
               <td>51351</td>
               <td>05/05/2015</td>
@@ -160,22 +159,81 @@
       
       <footer class="row">
         <div class="col-sm-6">
-          <button class="btn btn-primary">Nova Ordem de Serviço</button>
+          <button class="btn btn-primary" data-toggle="modal" data-target="#novaOS">Nova Ordem de Serviço</button>
         </div>
         <div class="col-sm-6 paginacao text-right">
           <ul class="pagination">
-            <li class="disabled"><a href=""><span><<</span></a></li>
+            <li class="disabled"><a href=""><span>&lt;&lt;</span></a></li>
             <li class="active"><a href=""><span>1</span></a></li>
             <li><a href=""><span>2</span></a></li>
             <li><a href=""><span>3</span></a></li>
             <li><a href=""><span>4</span></a></li>
             <li><a href=""><span>5</span></a></li>
-            <li><a href=""><span>>></span></a></li>
+            <li><a href=""><span>&gt;&gt;</span></a></li>
           </ul>
         </div>
       </footer>
     </div>
 
+    <div class="modal fade" id="novaOS">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h3 class="modal-title">Nova Ordem de Serviço</h3>
+          </div>
+          <form>
+            <div class="modal-body">
+              <div class="row">
+                <div class="form-group col-xs-12">
+                  <label>Código da OS</label>
+                  <p class="form-control-static">16413</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="form-group col-sm-5">
+                  <label for="cliente">Cliente</label>
+                  <select id="cliente" class="form-control">
+                    <option value="">Selecione...</option>
+                    <option value="1">Frodo Bolseiro</option>
+                    <option value="2">Gandalf Sinzento</option>
+                    <option value="3">Sauron de Mordor</option>
+                  </select>
+                </div>
+                <div class="form-group col-sm-7">
+                  <label for="servico">Serviços</label>
+                  <select id="servico" class="form-control">
+                    <option value="">Selecione...</option>
+                    <option value="1">Ajuste de Data/Hora</option>
+                    <option value="2">Conserto de Engrenagem</option>
+                    <option value="3">Troca de Bateria</option>
+                  </select>
+                </div>
+              </div>
+               <div class="row">
+                 <div class="form-group col-xs-12">
+                    <label for="obs">Observação</label>
+                    <textarea id="obs" class="form-control" rows="3"></textarea>
+                  </div>
+               </div>
+              <div class="row">
+                <div class="form-group col-sm-4">
+                  <label for="valor">Valor</label>
+                  <div class="input-group">
+                    <div class="input-group-addon">R$</div>
+                    <input type="text" name="valor" id="valor" class="form-control">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="reset" class="btn btn-danger">Limpar</button>
+              <button type="submit" class="btn btn-primary">Salvar</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    
     <script src="js/jquery-3.1.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/tooltip.js"></script>
