Navegação por Abas

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -169,6 +169,7 @@
             <li><a href=""><span>3</span></a></li>
             <li><a href=""><span>4</span></a></li>
             <li><a href=""><span>5</span></a></li>
+            <li><a href="navegacao-por-abas.html">Nav Tabs</a></li>
             <li><a href=""><span>&gt;&gt;</span></a></li>
           </ul>
         </div>
