--- a/public_html/index.html
+++ b/public_html/index.html
@@ -174,6 +174,8 @@
           </ul>
         </div>
       </footer>
+      
+      <h4 class="btn-link"><a href="usando-collapse.html">Utilizando Accordion</a></h4>
     </div>
 
     <div class="modal fade" id="novaOS">
