Refatoração dos pacotes.

--- a/public_html/affix-fixando-elementos.html
+++ b/public_html/affix-fixando-elementos.html
@@ -6,8 +6,8 @@
 
     <title>Affix - Fixando Elementos</title>
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/affix-fixando-elementos.css">
+    <link rel="stylesheet" href="vendors/css/bootstrap.min.css">
+    <link rel="stylesheet" href="dist/css/affix-fixando-elementos.css">
   </head>
   <body data-spy="scroll" data-target="#menu" data-offset="100">
 
@@ -34,7 +34,7 @@
 
     </div>
 
-    <script src="js/jquery-3.1.0.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="vendors/js/jquery-3.1.0.min.js"></script>
+    <script src="vendors/js/bootstrap.min.js"></script>
   </body>
 </html>
