--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,8 +6,8 @@
 
     <title>Início</title>
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="vendors/css/bootstrap.min.css">
+    <link rel="stylesheet" href="dist/css/index.css">
   </head>
   <body>
     <nav class="navbar navbar-inverse navbar-static-top">
@@ -19,7 +19,7 @@
             <span class="icon-bar"></span>
           </button>
           <a href="index.html" class="navbar-brand logotipo">
-            <img src="img/sattra-logo.png" alt="logo">
+            <img src="dist/img/sattra-logo.png" alt="logo">
           </a>
         </div>
         <div class="collapse navbar-collapse" id="menu">
@@ -252,8 +252,8 @@
       </div>
     </div>
     
-    <script src="js/jquery-3.1.0.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/tooltip.js"></script>
+    <script src="vendors/js/jquery-3.1.0.min.js"></script>
+    <script src="vendors/js/bootstrap.min.js"></script>
+    <script src="dist/js/tooltip.js"></script>
   </body>
 </html>
