--- a/public_html/navegacao-por-abas.html
+++ b/public_html/navegacao-por-abas.html
@@ -6,7 +6,7 @@
 
     <title>Navegação por Abas</title>
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="vendors/css/bootstrap.min.css">
   </head>
   <body>
     
@@ -64,7 +64,7 @@
       </div>
     </div>
     
-    <script src="js/jquery-3.1.0.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="vendors/js/jquery-3.1.0.min.js"></script>
+    <script src="vendors/js/bootstrap.min.js"></script>
   </body>
 </html>
