--- a/public_html/grid-system.html
+++ b/public_html/grid-system.html
@@ -6,7 +6,7 @@
 
         <title>Minha Página Utilizando Bootstrap</title>
 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="vendors/css/bootstrap.min.css">
     </head>
     <body>
         <!--
@@ -57,7 +57,7 @@
             </div>
         </div>
 
-        <script src="js/jquery-3.1.0.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
+        <script src="vendors/js/jquery-3.1.0.min.js"></script>
+        <script src="vendors/js/bootstrap.min.js"></script>
     </body>
 </html>
