--- a/public_html/login.html
+++ b/public_html/login.html
@@ -6,14 +6,14 @@
 
     <title>Login</title>
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="vendors/css/bootstrap.min.css">
+    <link rel="stylesheet" href="dist/css/login.css">
   </head>
   <body>
 
     <div class="login-form col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
       <header>
-        <h1><img class="img-responsive" src="img/sattra-logo.png" alt="Sattra"></h1>
+        <h1><img class="img-responsive" src="dist/img/sattra-logo.png" alt="Sattra"></h1>
         <h2 class="text-center">Entre com seu <b>usuário</b> e <b>senha</b></h2>
       </header>
       <form>
@@ -43,7 +43,7 @@
       </form>
     </div>
 
-    <script src="js/jquery-3.1.0.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="vendors/js/jquery-3.1.0.min.js"></script>
+    <script src="vendors/js/bootstrap.min.js"></script>
   </body>
 </html>
