--- a/public_html/noticia.html
+++ b/public_html/noticia.html
@@ -6,7 +6,7 @@
 
     <title>Notícia - Layout Responsivo</title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="dirst/css/style.css">
   </head>
   <body>
     <article>
@@ -29,7 +29,7 @@
       </p>
     </article>
 
-    <script src="js/jquery-3.1.0.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="vendors/js/jquery-3.1.0.min.js"></script>
+    <script src="vendors/js/bootstrap.min.js"></script>
   </body>
 </html>
