--- a/public_html/tipografia.html
+++ b/public_html/tipografia.html
@@ -6,7 +6,7 @@
 
     <title>Tipografia</title>
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="vendors/css/bootstrap.min.css">
   </head>
   <body>
     <div class="container">
@@ -151,7 +151,7 @@
   <dd>Viva Forevis aptent taciti sociosqu ad litora torquent Sapien in monti palavris qui num significa nadis i pareci latim.</dd>
 </dl>
 
-<script src="js/jquery-3.1.0.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="vendors/js/jquery-3.1.0.min.js"></script>
+<script src="vendors/js/bootstrap.min.js"></script>
 </body>
 </html>
